# kyvernitis

./: .gitignore  flake.nix  kyvernitis.h  west.yml
.github/workflows/: clang-build.yml
.west/: config
astro-assist/src/: main.c
bio-arm/src/: main.c
drivers/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/wheel_encoders_stm32/: CMakeLists.txt  Kconfig  qdec_distance_stm32.c
dts/bindings/: st,stm32-qdec-distance.yaml
fpv-switch/src/: main.c
gripper-arm/src/: main.c
include/kyvernitis/lib/: drive.h  kyvernitis.h
lib/: drive.c  kyvernitis.c
mother/: CMakeLists.txt  prj.conf
mother/boards/: black_f407.overlay  qdec_fragment.overlay
mother/src/: drive.c  drive.h  main.c  test_pwm.c  test_qdec.c  test_serial.c  test_software.c
scripts/: README.md  mother_interface.py
zephyr/: CMakeLists.txt  Kconfig
